# pfp-internship

./: .gitignore  BMMC.cltracer  Compiler  Makefile  README.md  TODO  a.out  bmmc.cpp  bmmc.cu  perm.h  permutation.cu  test  test.c  test.cpp  test.cu  test.fut
Experiments/: BMMC Identities.md  BMMC Implementations.md  Experiments.cabal  Main.hs  Notes
Experiments/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Papers/: Summaries
Theory/: Main.hs  Test.fut  Theory.cabal  a.out
Theory/dist-newstyle/cache/: config  elaborated-plan  improved-plan  up-to-date
cuda-benchmarks/: Makefile  kernels.cu  main.cu  perm.h  test
cuda_benchmarks/: Makefile  kernels.cu  main.cu  test
futhark-master/: .gitignore  FUSION.md  cabal.project  futhark.cabal
futhark-master/MYSTUFF/: Passes.md  test.fut
futhark-master/src/Futhark/: Construct.hs  Passes.hs  Pipeline.hs
futhark-master/tests_parm/: bitonic_sort.fut  bitonic_sort_modules.fut  fft.fut  parm  parm.c  parm.fut  parm_id.fut  parm_opencl  parm_reduce.fut
futhark-master/unittests/: futhark_tests.hs
openCL_benchmarks/: bmmc.cl  bmmc.cpp  perm.h
theory/: .gitignore  BMMC Algebra.md  BMMC Implementations.md  Compiler_Structure.md  Hacking roadmap.md  MainBackup.hs  Passes.md  cabal.project  kernels.cabal  sort.fut  theory.cabal  tmp.hs  transpose.cpp
theory/artifact/: benchmark.cu
theory/artifact/exe/: Main.hs
theory/artifact/src/: KernelGen.hs
theory/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
theory/dist-newstyle/packagedb/ghc-9.2.5/: package.cache
theory/exe/: Main.hs
theory/src/: Bmmc.hs  KernelGen.hs  Main.hs  Perm.hs
theory/tests/: BmmcTests.hs  ParmMatrixTests.hs  PermTests.hs  Test.hs
traces/: 20230330134850.cltrace  20230330134937.cltrace  20230330135133.cltrace  20230330135146.cltrace  20230330140859.cltrace  20230330141052.cltrace  20230330141500.cltrace
(+40 files in other folders)
