cabal-version:      2.4
name:               theory
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mathis BD
maintainer:         mathis.bouverot@ens.psl.eu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

executable main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Bmmc,
                      Perm,
                      KernelGen

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      text-format-simple >= 1.1,
                      Unique >= 0.4.7,
                      random >= 1.2.1,
                      vector >= 0.13
    hs-source-dirs:   src
    default-language: Haskell2010